--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,10 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
+@import url('./hero.css');
+@import url('./about-us.css');
+@import url('./our-jachts.css');
+@import url('./advantages.css');
+@import url('./rent-a-yacht.css');
+@import url('./reviews.css');
 @import url('./footer.css');
