add section class

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section>
+<section class="section-advantages">
     <div class="container">
         <ol class="section-advantages-list">
             <li class="section-advantages-list-item"><hr class="section-advantages-line"><p>Swimming and water sports: try your hand at water skiing</p></li>
