--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,5 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+        <a class="logo-footer" href="">yachtjet</a>
+        </div>
 </footer>
