--- a/src/css/container.css
+++ b/src/css/container.css
@@ -4,23 +4,28 @@
   min-width: 320px;
   max-width:375px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 20px;
 }
 
-
+@media only screen and (min-width: 375px)
+{
+  .container{min-width: 375px;}
+}
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding: 0 32px;
   }
 }
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    padding: 0 50px;
   }
 }
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width: 1440px){
   .container {
       max-width: 1440px;
     }
