--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,43 @@
 <section class="section-advantages">
-    <div class="container">
-        <ol class="section-advantages-list">
-            <li class="section-advantages-list-item"><hr class="section-advantages-line"><p>Swimming and water sports: try your hand at water skiing</p></li>
-            <li class="section-advantages-list-item"><hr class="section-advantages-line"><p>Fishing: try to catch your own dinner</p></li>
-            <li class="section-advantages-list-item"><hr class="section-advantages-line"><p>Sightseeing tours: take a shore or island tour, enjoy the views and sunsets from the water </p></li>
-            <li class="section-advantages-list-item"><hr class="section-advantages-line"><p>Rest and relaxation: read a book or listen to music while enjoying the outdoor atmosphere.</p></li>
-        </ol>
-        <div>
-            <picture>
-                <source srcset="" media="(min-width: 1440px)">
-                <source srcset="" media="(min-width: 1280px)">
-                <source srcset="" media="(min-width: 768px)">
-                <source srcset="" media="(max-width: 767px)">
-                <img src="" alt="">
-            </picture>
-        </div>
+  <div class="container">
+    <div class="section-advantages-wrapper">
+      <ol class="section-advantages-list">
+        <li class="section-advantages-list-item">
+            <p class="section-advantages-list-number">01</p>
+          <hr class="section-advantages-line" />
+          <p class="section-advantages-list-item-text">Swimming and water sports: try your hand at water skiing</p>
+        </li>
+        <li class="section-advantages-list-item">
+            <p class="section-advantages-list-number">02</p>
+          <hr class="section-advantages-line" />
+          <p class="section-advantages-list-item-text">Fishing: try to catch your own dinner</p>
+        </li>
+        <li class="section-advantages-list-item">
+            <p class="section-advantages-list-number">03</p>
+          <hr class="section-advantages-line" />
+          <p class="section-advantages-list-item-text">
+            Sightseeing tours: take a shore or island tour, enjoy the views and
+            sunsets from the water
+          </p>
+        </li>
+        <li class="section-advantages-list-item">
+            <p class="section-advantages-list-number">04</p>
+          <hr class="section-advantages-line" />
+          <p class="section-advantages-list-item-text">
+            Rest and relaxation: read a book or listen to music while enjoying
+            the outdoor atmosphere.
+          </p>
+        </li>
+      </ol>
     </div>
+    <div>
+      <picture>
+        <source srcset="" media="(min-width: 1440px)" />
+        <source srcset="" media="(min-width: 1280px)" />
+        <source srcset="" media="(min-width: 768px)" />
+        <source srcset="" media="(max-width: 767px)" />
+        <img src="" alt="" />
+      </picture>
+    </div>
+  </div>
 </section>
