final advantages mob

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,17 +3,21 @@
     <div class="section-advantages-wrapper">
       <ol class="section-advantages-list">
         <li class="section-advantages-list-item">
-            <p class="section-advantages-list-number">01</p>
+          <p class="section-advantages-list-number">01</p>
           <hr class="section-advantages-line" />
-          <p class="section-advantages-list-item-text">Swimming and water sports: try your hand at water skiing</p>
+          <p class="section-advantages-list-item-text">
+            Swimming and water sports: try your hand at water skiing
+          </p>
         </li>
         <li class="section-advantages-list-item">
-            <p class="section-advantages-list-number">02</p>
+          <p class="section-advantages-list-number">02</p>
           <hr class="section-advantages-line" />
-          <p class="section-advantages-list-item-text">Fishing: try to catch your own dinner</p>
+          <p class="section-advantages-list-item-text">
+            Fishing: try to catch your own dinner
+          </p>
         </li>
         <li class="section-advantages-list-item">
-            <p class="section-advantages-list-number">03</p>
+          <p class="section-advantages-list-number">03</p>
           <hr class="section-advantages-line" />
           <p class="section-advantages-list-item-text">
             Sightseeing tours: take a shore or island tour, enjoy the views and
@@ -21,7 +25,7 @@
           </p>
         </li>
         <li class="section-advantages-list-item">
-            <p class="section-advantages-list-number">04</p>
+          <p class="section-advantages-list-number">04</p>
           <hr class="section-advantages-line" />
           <p class="section-advantages-list-item-text">
             Rest and relaxation: read a book or listen to music while enjoying
@@ -30,13 +34,19 @@
         </li>
       </ol>
     </div>
-    <div>
+    <div class="section-advantages-photo-wrapper">
       <picture>
         <source srcset="" media="(min-width: 1440px)" />
         <source srcset="" media="(min-width: 1280px)" />
         <source srcset="" media="(min-width: 768px)" />
-        <source srcset="" media="(max-width: 767px)" />
-        <img src="" alt="" />
+        <source
+          srcset="
+            ../img/advantages-mob.jpg 1x,
+            ../img/advantages-mob@2x.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img src="../img/advantages-mob.jpg" alt="photo-yachtcab" />
       </picture>
     </div>
   </div>
