--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,23 +1,22 @@
 .section-advantages {
   background: #0e1823;
 }
+
 .section-advantages-wrapper {
   padding: 80px 20px;
   border-radius: 24px;
   max-width: 335px;
-  min-height: 642px;
   background-color: #1b414b;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 }
 
 .section-advantages-list {
-  padding-left: 0;
   display: flex;
   flex-direction: column;
   gap: 40px;
   list-style-type: none;
 }
-.section-advantages-list-item{
+.section-advantages-list-item {
   display: flex;
   flex-direction: column;
   gap: 18px;
@@ -46,4 +45,11 @@
   letter-spacing: -0.02em;
   color: #fbfbfb;
   opacity: 0.8;
+}
+
+.section-advantages-photo-wrapper {
+  border-radius: 24px;
+  max-width: 335px;
+  overflow: hidden;
+  margin: 0 auto;
 }
