--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -41,12 +41,12 @@
         <source srcset="" media="(min-width: 768px)" />
         <source
           srcset="
-            ../img/advantages-mob.jpg 1x,
-            ../img/advantages-mob@2x.jpg 2x
+            /img/advantages-mob.jpg 1x,
+            /img/advantages-mob@2x.jpg 2x
           "
           media="(max-width: 767px)"
         />
-        <img src="../img/advantages-mob.jpg" alt="photo-yachtcab" />
+        <img src="/img/advantages-mob.jpg" alt="photo-yachtcab" />
       </picture>
     </div>
   </div>
