final advantages mob 3

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,6 @@
 <section class="section-advantages">
   <div class="container">
+    <h2 class="visually-hidden ">Hiding heading text</h2>
     <div class="section-advantages-wrapper">
       <ol class="section-advantages-list">
         <li class="section-advantages-list-item">
