--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,6 +1,19 @@
 .section-advantages {
   background: #0e1823;
 }
+.visually-hidden {
+  color: #fff;
+  position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
 
 .section-advantages-wrapper {
   padding: 80px 20px;
