--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -36,19 +36,7 @@
       </ol>
     </div>
     <div class="section-advantages-photo-wrapper">
-      <picture>
-        <source srcset="" media="(min-width: 1440px)" />
-        <source srcset="" media="(min-width: 1280px)" />
-        <source srcset="" media="(min-width: 768px)" />
-        <source
-          srcset="
-            /img/advantages-mob.jpg 1x,
-            /img/advantages-mob@2x.jpg 2x
-          "
-          media="(max-width: 767px)"
-        />
-        <img src="/img/advantages-mob.jpg" alt="photo-yachtcab" />
-      </picture>
+        <img srcset="/img/advantages-desk.jpg 1x, /img/advantages-desk@2x.jpg 2x" src="/img/advantages-desk.jpg" alt="photo-yachtcab" />
     </div>
   </div>
 </section>
