--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
 
 /* Sections style */
 @import url('./header.css');
+@import url('./mobile-menu.css');
 @import url('./hero.css');
 @import url('./about-us.css');
 @import url('./our-jachts.css');
@@ -19,3 +20,4 @@
 @import url('./rent-a-yacht.css');
 @import url('./reviews.css');
 @import url('./footer.css');
+@import url('./backdrop.css');
