--- a/src/css/container.css
+++ b/src/css/container.css
@@ -7,6 +7,10 @@
   padding: 0 20px;
 }
 
+@media only screen and (min-width: 375px)
+{
+  .container {max-width: 375px; }
+}
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
   .container {
