--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -63,20 +63,10 @@ img {
 
 .section-advantages-photo-wrapper {
   max-width: 335px;
-  height: 424px;
+  min-height: 424px;
   border-radius: 24px;
   overflow: hidden;
   margin: 0 auto;
-}
-
-@media only screen and (min-width: 375px) {
-  .container {
-    width: 375px;
-  }
-  .section-advantages-wrapper,
-  .section-advantages-photo-wrapper {
-    width: 335px;
-  }
 }
 
 @media only screen and (min-width: 768px) {
