--- a/src/css/backdrop.css
+++ b/src/css/backdrop.css
@@ -63,9 +63,8 @@ only screen and (min-resolution: 192dpi) {
   height: 24px;
   padding: 0;
   border: 0;
-  line-height: 0;
   border-radius: 50%;
-  background-color: #E7E9FC;
+  background-color: #00B8D9;;
   border: solid 1px rgba(0, 0, 0, 0.1);
   align-items: center;
   justify-content: center;
@@ -78,19 +77,19 @@ only screen and (min-resolution: 192dpi) {
 }
 
 .icon-close {
-  fill: #2e2f42;
+  fill: #055545;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-icon-modal:hover,
 .btn-icon-modal:focus {
-  background-color: var(--active-ocean);
+  background-color: #0097a7;;
   border: none;
 }
 
 .btn-icon-modal:hover .icon-close,
 .btn-icon-modal:focus .icon-close {
-  fill: #ffffff;
+  color: #040306;
 }
 
 
@@ -98,8 +97,10 @@ only screen and (min-resolution: 192dpi) {
 
 
 .text-modal {
-  font-weight: 500;
-  line-height: 1.5;
+font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.03em;
+  color: #fbfbfb;
   text-align: center;
   margin-bottom: 16px;
 }
@@ -116,7 +117,7 @@ only screen and (min-resolution: 192dpi) {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #8e8f99;
+  color: #fbfbfb;
   display: block;
   margin-bottom: 4px;
 }
@@ -131,11 +132,15 @@ only screen and (min-resolution: 192dpi) {
   border-radius: 4px;
   width: 100%;
   height: 40px;
-  padding-left: 38px;
+  font-weight: 500;
+    font-size: 14px;
+    letter-spacing: -0.03em;
+    color: #fbfbfb;
   background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .input-modal:hover,
 .input-modal:focus,
@@ -165,12 +170,7 @@ border-color: #00B8D9;
   margin-bottom: 16px;
 }
 
-.textarea::placeholder {
-  font-size: 12px;
-  line-height: 1.2;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
-}
+
 
 .textarea {
   resize: none;
@@ -179,10 +179,10 @@ border-color: #00B8D9;
   width: 100%;
   height: 120px;
   padding: 8px 16px;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
+  font-weight: 500;
+    font-size: 14px;
+    letter-spacing: -0.03em;
+  color: #fbfbfb;
   background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -198,10 +198,10 @@ border-color: #00B8D9;
 .input-check {}
 
 .label-check {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: var(--label-color);
+  font-weight: 500;
+font-size: 12px;
+letter-spacing: -0.03em;
+color: #fbfbfb;
   display: flex;
   align-items: center;
 }
@@ -209,7 +209,8 @@ border-color: #00B8D9;
 .span-check {
   display: inline-flex;
   border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
+  resize: none;
+    border: 1px solid rgba(255, 255, 255, 0.4);
   width: 16px;
   height: 16px;
   align-items: center;
@@ -232,7 +233,7 @@ border-color: #00B8D9;
 }
 
 .input-check:checked+.label-check span {
-  background-color: #404bbf;
+  background-color:#00B8D9;
   border: none;
   fill: #f4f4fd;
 }
@@ -248,26 +249,40 @@ border-color: #00B8D9;
 }
 
 .btn-modal {
-  background-color: var(--primary-brand);
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
+  background-color: #00B8D9;;
+font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+  color: #fbfbfb;
   display: block;
   margin: 0 auto;
-  border-radius: 4px;
-  padding: 16px 32px;
-  min-width: 169px;
-  height: 56px;
+  border-radius: 15px;
+  padding: 14px 32px;
+  min-width: 141px;
+  height: 46px;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+
 .btn-modal:hover,
 .btn-modal:focus {
-  background-color: var(--active-ocean);
+  background-color: #0097a7;;
 }
-
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 @media screen and (min-width:768px) {
   .modal {
