--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -1,6 +1,11 @@
 <div class="backdrop">
   <div class="modal">
-    <button type="button" class="btn-icon-modal">
+    <button
+      type="button"
+      class="btn-icon-modal"
+      aria-label="Close modal"
+      title="Close modal"
+    >
       <svg class="icon-close" width="8" height="8">
         <use href="./images/icons.svg#icon-close"></use>
       </svg>
@@ -33,7 +38,7 @@
             type="tel"
             id="user-tel"
             required
-            title="xxx-xxx-xx-xx"
+            pattern="^\+\d{2}-\d{3}-\d{3}-\d{2}-\d{2}$"
           />
           <svg class="icon-modal" width="18" height="24">
             <use href="./images/icons.svg#icon-phone"></use>
@@ -49,6 +54,7 @@
             type="email"
             id="user-email-modal"
             title="example@gmai.com"
+            pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
             required
           />
           <svg class="icon-modal" width="18" height="24">
@@ -63,7 +69,6 @@
           name="user-comment"
           id="user-comment"
           rows="10"
-          placeholder="Text input"
         ></textarea>
       </div>
       <div class="box-input-check">
