--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,31 +1,185 @@
 .section {
-  padding-top: 50px;
-  padding-bottom: 100px;
 }
 .about-us {
+  padding-top: 0;
   margin: 0 auto;
 }
 .container {
+  width: 1440px;
 }
 .about-us-container {
 }
 .about-us-content {
-  border-radius: 24px;
-  max-width: 1340px;
-  height: 675px;
+  border-radius: 24px 24px 7% 7%;
   background: #fbfbfb;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  max-width: 1340px;
 }
 .info-about {
+  display: flex;
+  flex-direction: row;
+  padding: 50px;
+  gap: 299px;
 }
 .title-about {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 1;
+  letter-spacing: -0.02em;
+  color: #1b414b;
+  max-width: 537px;
 }
 .describtion-about {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 404px;
+  height: 187px;
+  text-align: left;
 }
 .text-title-about {
+  font-weight: 400;
+  font-size: 23px;
+  line-height: 1;
+  letter-spacing: -0.02em;
+  color: #1b414b;
+  text-align: left;
 }
 .text-info-about {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 1.15;
+  letter-spacing: -0.02em;
+  color: #040306;
+  opacity: 0.4;
+  margin-bottom: 0;
 }
 .jacht-about-us {
+  width: 100%;
 }
 .about-us-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* --- АДАПТИВНА ВЕРСТКА --- */
+
+/*  Мобільна версія (до 767px) */
+@media only screen and (min-width: 375px) {
+  .container {
+    min-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .about-us-content {
+    max-width: 335px;
+    border-radius: 24px 24px 7% 7%;
+    background: #fbfbfb;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .info-about {
+    display: flex;
+    flex-direction: column;
+    padding: 40px 20px;
+    gap: 40px;
+  }
+  .title-about {
+    max-width: 295px;
+    font-size: 28px;
+  }
+  .describtion-about {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 295px;
+  }
+  .text-title-about {
+    font-size: 18px;
+  }
+  .text-info-about {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+/* Планшетна версія (768px ) */
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .section {
+    padding-bottom: 75px;
+  }
+  .about-us-content {
+    max-width: 704px;
+  }
+  .info-about {
+    padding: 50px 32px;
+    gap: 50px;
+  }
+  .title-about {
+    max-width: 536px;
+    font-size: 48px;
+  }
+  .describtion-about {
+    width: 389px;
+  }
+  .text-title-about {
+    font-size: 23px;
+  }
+  .text-info-about {
+    font-size: 13px;
+    line-height: 1.15;
+  }
+}
+
+/*  Десктопна версія (1280px) */
+@media only screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .about-us-content {
+    max-width: 1180px;
+  }
+  .info-about {
+    flex-direction: row;
+    padding: 50px;
+    gap: 189px;
+  }
+  .title-about {
+    max-width: 537px;
+  }
+  .describtion-about {
+    width: 354px;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .section {
+    padding-bottom: 75px;
+  }
+  .container {
+    max-width: 1440px;
+  }
+  .about-us-content {
+    max-width: 1340px;
+  }
+  .info-about {
+    gap: 299px;
+  }
+  .title-about {
+    max-width: 537px;
+  }
+  .describtion-about {
+    width: 404px;
+  }
 }
