--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -18,18 +18,19 @@
             </div>
             <picture class="jacht-about-us">
                 <source srcset="/images/Photo-desk-1x.jpg 1x,
-                                            /images/Photo-desk@2x.jpg 2x" media="(min-width: 1440px)" width="1340"
-                    height="470" />
+                                /images/Photo-desk@2x.jpg 2x
+                                " media="(min-width: 1440px)" />
                 <source srcset="/images/Photo-1280-1x.jpg 1x,
-                                            /images/Photo-1280-@2x.jpg 2x" media="(min-width: 1280px)" width="1180"
-                    height="470" />
+                                /images/Photo-1280-@2x.jpg 2x
+                                " media="(min-width: 1280px)" />
                 <source srcset="/images/Photo-tab-1x.jpg 1x,
-                                            /images/Photo-tab-@2x.jpg 2x" media="(min-width: 768px)" width="704"
-                    height="470" />
+                                /images/Photo-tab-@2x.jpg 2x
+                                " media="(min-width: 768px)" />
                 <source srcset="/images/Photo-mob-1x.jpg 1x,
-                                            /images/Photo-mob-@2x.jpg 2x" media="(max-width: 767px)" width="335"
-                    height="395" />
-                <img class="about-us-image" src="/images/Photo-mob-1x.jpg" alt="fancy yacht in sea">
+                                /images/Photo-mob-@2x.jpg 2x
+                                " media="(max-width: 767px)" />
+                <img class="about-us-image" src="./images/Photo-mob-1x.jpg" alt="premium-yacht" width="1340"
+                    height="470">
             </picture>
 
         </div>
