--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,5 +1,5 @@
 .section-advantages {
-  background: #0e1823;
+  background-color: #0e1823;
   padding-bottom: 80px;
 }
 img {
@@ -60,6 +60,9 @@ img {
   color: #fbfbfb;
   opacity: 0.8;
 }
+.section-advantages-list-item:first-child .section-advantages-list-item-text {
+  max-width: 238px;
+}
 
 .section-advantages-photo-wrapper {
   max-width: 335px;
@@ -70,4 +73,30 @@ img {
 }
 
 @media only screen and (min-width: 768px) {
+  .section-advantages {
+  padding-bottom: 150px;
+}
+.section-advantages-wrapper{
+  padding: 90px 32px;
+  max-width: 704px;
+  margin: 0 auto 32px;
+}
+.section-advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 44px;
+  column-gap: 32px;
+}
+.section-advantages-list-item {
+  width: calc((100% - 32px)/ 2);
+}
+.section-advantages-list-item-text {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 1.15;
+  max-width: 280px;
+}
+.section-advantages-photo-wrapper {
+  max-width: 704px;
+}
 }
