--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -36,7 +36,13 @@
       </ol>
     </div>
     <div class="section-advantages-photo-wrapper">
-        <img srcset="/img/advantages-desk.jpg 1x, /img/advantages-desk@2x.jpg 2x" src="/img/advantages-desk.jpg" alt="photo-yachtcab" />
+        <picture>
+          <source srcset="/img/advantages-deskbig.jpg 1x, img/advantages-deskbig@2x.jpg 2x" media="(min-width: 1440px)">
+          <source srcset="/img/advantages-desk.jpg 1x, /img/advantages-desk@2x.jpg 2x" media="(min-width: 1280px)">
+          <source srcset="/img/advantages-tab.jpg 1x, /img/advantages-tab@2x.jpg 2x" media="(min-width: 768px)">
+           <source srcset="/img/advantages-mob.jpg 1x, /img/advantages-mob@2x.jpg 2x" media="(max-width: 767px)">
+          <img src="../src/img/advantages-mob.jpg" alt="photo-yachtcab" />
+        </picture>
     </div>
   </div>
 </section>
