--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -8,7 +8,8 @@ p {
   margin: 0;
 }
 
-ul,ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -28,6 +29,6 @@ img {
   max-width: 100%;
   height: auto;
 }
-body{
+body {
   padding-top: 35px;
 }
