--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
 <section class="section-advantages">
-  <div class="container">
+  <div class="container container-advantages">
     <h2 class="visually-hidden ">Hiding heading text</h2>
     <div class="section-advantages-wrapper">
       <ol class="section-advantages-list">
