--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -100,3 +100,15 @@ img {
   max-width: 704px;
 }
 }
+
+@media only screen and (min-width: 1280px) {
+ 
+ .container-advantages {
+  display: flex;
+  gap: 32px;
+ }
+  .section-advantages-wrapper{
+  padding: 90px 50px;
+  max-width: 716px;
+}
+}
