--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -41,7 +41,7 @@
           <source srcset="/img/advantages-desk.jpg 1x, /img/advantages-desk@2x.jpg 2x" media="(min-width: 1280px)">
           <source srcset="/img/advantages-tab.jpg 1x, /img/advantages-tab@2x.jpg 2x" media="(min-width: 768px)">
            <source srcset="/img/advantages-mob.jpg 1x, /img/advantages-mob@2x.jpg 2x" media="(max-width: 767px)">
-          <img src="../src/img/advantages-mob.jpg" alt="photo-yachtcab" />
+          <img src="/src/img/advantages-mob.jpg" alt="photo-yachtcab" />
         </picture>
     </div>
   </div>
