--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -116,3 +116,12 @@ img {
     width: 432px;
   }
 }
+
+@media only screen and (min-width: 1440px) {
+   .section-advantages-wrapper {
+    max-width: 768px;
+  }
+  .section-advantages-photo-wrapper {
+    width: 540px;
+  }
+}
