--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -45,7 +45,7 @@
       <li class="reviews-list-item">
         <img
           class="reviews-author-img"
-          src="./img/ihor.png"
+          src="/img/ihor.png"
           srcset="/ihor.png 1x, /ihor@2x.png 2x"
           alt="ihor"
           width="56"
