--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,21 +13,21 @@
             <li>
               <a class="social-icon-link" href="https://www.instagram.com/goitclub/" target="_blank">
                 <svg class="social-icon-item" width="24" height="24">
-                  <use href="/src/img/icons.svg#icon-insta"></use>
+                  <use href="/img/icons.svg#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-icon-link" href="https://www.youtube.com/c/GoIT" target="_blank">
                 <svg class="social-icon-item" width="24" height="24">
-                  <use href="/src/img/icons.svg#icon-youtube"></use>
+                  <use href="/img/icons.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-icon-link" href="https://www.facebook.com/goITclub/  " target="_blank">
                 <svg class="social-icon-item" width="24" height="24">
-                  <use href="/src/img/icons.svg#icon-fb"></use>
+                  <use href="/img/icons.svg#icon-fb"></use>
                 </svg>
               </a>
             </li>
