--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -46,7 +46,7 @@
         <img
           class="reviews-author-img"
           src="/img/ihor.png"
-          srcset="/ihor.png 1x, /ihor@2x.png 2x"
+          srcset="/img/ihor.png 1x, /img/ihor.png@2x.png 2x"
           alt="ihor"
           width="56"
           height="56"
