add header and style header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,53 @@
-<header class="header">
-  <div class="container"></div>
+<header class="page-header">
+  <div class="container header-container">
+    <a class="logo-header logo-link" href="./index.html">yachtjet</a>
+
+    <nav class="navi-menu">
+      <button class="btn-menu" type="button" id="about">about</button>
+      <button class="btn-menu" type="button" id="yachts">Yachts</button>
+      <button class="btn-menu" type="button" id="reviews">Reviews</button>
+      <button class="btn-menu" type="button">Order Service</button>
+    </nav>
+
+    <ul class="social-header">
+      <li class="li-social-header">
+        <a
+          class="link-social-header"
+          href="https://www.instagram.com/goitclub/"
+          target="_blank"
+        >
+          <svg class="icon-svg-header" width="19" height="19">
+            <use href="/img/icons.svg#icon-insta"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="li-social-header">
+        <a
+          class="link-social-header"
+          href="https://www.youtube.com/c/GoIT"
+          target="_blank"
+        >
+          <svg class="icon-svg-header" width="20" height="20">
+            <use href="/img/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="li-social-header">
+        <a
+          class="link-social-header"
+          href="https://www.facebook.com/goITclub/"
+          target="_blank"
+        >
+          <svg class="icon-svg-header" width="20" height="20">
+            <use href="/img/icons.svg#icon-fb"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <button class="mob-menu" type="button">
+      <svg class="mob-menu-icon" width="28" height="28" data-menu-open>
+        <use href="../img/icons.svg#icon-burger"></use>
+      </svg>
+    </button>
+  </div>
 </header>
