--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -1,13 +1,18 @@
 /* --- АДАПТИВНА ВЕРСТКА --- */
 /*  Мобільна версія (до 767px) */
+
 .about-us {
   padding-top: 0;
   margin: 0 auto;
+}
+.container {
+  width: 100%;
 }
 .about-us-container {
   margin-bottom: 80px;
 }
 .about-us-content {
+  width: 100%;
   max-width: 335px;
   border-radius: 24px 24px 7% 7%;
   background: #fbfbfb;
@@ -34,9 +39,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
   width: 295px;
-
-  max-width: 100%;
 }
 .text-title-about {
   font-weight: 400;
@@ -64,6 +68,7 @@
   display: block;
   max-width: 100%;
   height: auto;
+  object-fit: cover;
 }
 /* Планшетна версія (768px ) */
 @media only screen and (min-width: 768px) {
