--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   border: 1px solid #fbfbfb;
   border-radius: 8px;
   width: 335px;
@@ -53,12 +52,14 @@
     gap: 4px;
   }
   .btn-menu {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 8px;
     width: 91px;
     height: 40px;
     background-color: rgba(27, 65, 75, 0.5);
     border: none;
-
     font-weight: 400;
     font-size: 9px;
     line-height: 1.3;
@@ -76,7 +77,6 @@
   .social-header {
     display: flex;
     min-width: 88px;
-
     gap: 8px;
     justify-content: space-evenly;
   }
@@ -101,7 +101,12 @@
   .header-container {
     width: 1080px;
     height: 48px;
-
     margin-bottom: 155px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-container {
+    width: 1240px;
   }
 }
