changed svg address, changed f-title width, add #

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -13,8 +13,8 @@
       <li class="reviews-list-item">
         <img
           class="reviews-author-img"
-          src="./img/john.png"
-          srcset="/john.png 1x, /john@2x.png 2x"
+          src="/img/john.png"
+          srcset="/img/john.png 1x, /img/john@2x.png 2x"
           alt="john"
           width="56"
           height="56"
@@ -29,8 +29,8 @@
       <li class="reviews-list-item">
         <img
           class="reviews-author-img"
-          src="./img/viktoria.png"
-          srcset="/viktoria.png 1x, /viktoria@2x.png 2x"
+          src="/img/viktoria.png"
+          srcset="/img/viktoria.png 1x, /img/viktoria@2x.png 2x"
           alt="viktoria"
           width="56"
           height="56"
@@ -46,7 +46,7 @@
         <img
           class="reviews-author-img"
           src="/img/ihor.png"
-          srcset="/ihor.png 1x, /ihor@2x.png 2x"
+          srcset="/img/ihor.png 1x, /img/ihor.png@2x.png 2x"
           alt="ihor"
           width="56"
           height="56"
