--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="section about-us" id="about-us">
+<section class="section about-us" id="about">
     <div class="container about-us-container">
         <div class="about-us-content">
             <div class="info-about">
