--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-</footer>
+<footer>
   <div class="container f-container">
     <div class="f-wrap-logo">
       <div class="f-logo-list">
@@ -40,7 +40,7 @@
           <p class="adv-privacy advent">2023. Yacht Adventures</p>
           <p class="adv-privacy privacy">Privacy Police</p>
         </div>
-      </h2>
-    </div>
+  </div>
+  
 </footer>
 
