--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
       <a class="btn-menu" href="#about">About</a>
       <a class="btn-menu" href="#yachts">Yachts</a>
       <a class="btn-menu" href="#reviews">Reviews</a>
-      <a class="btn-menu" href="">Order Service</a>
+      <a class="btn-menu" href="#">Order Service</a>
     </nav>
     <address>
       <ul class="social-header">
