--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -1,13 +1,14 @@
-<div class="backdrop">
+<div class="backdrop is-open">
   <div class="modal">
     <button
       type="button"
       class="btn-icon-modal"
       aria-label="Close modal"
       title="Close modal"
+      data-modal-close
     >
       <svg class="icon-close" width="8" height="8">
-        <use href="./images/icons.svg#icon-close"></use>
+        <use href="/img/icons.svg#icon-close"></use>
       </svg>
     </button>
     <p class="text-modal">Leave your contacts and we will call you back</p>
@@ -25,7 +26,7 @@
             pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
           />
           <svg class="icon-modal" width="18" height="24">
-            <use href="./images/icons.svg#icon-person"></use>
+            <use href="/img/icons.svg#icon-person"></use>
           </svg>
         </div>
       </div>
@@ -41,7 +42,7 @@
             pattern="^\+\d{2}-\d{3}-\d{3}-\d{2}-\d{2}$"
           />
           <svg class="icon-modal" width="18" height="24">
-            <use href="./images/icons.svg#icon-phone"></use>
+            <use href="/img/icons.svg#icon-tel"></use>
           </svg>
         </div>
       </div>
@@ -58,7 +59,7 @@
             required
           />
           <svg class="icon-modal" width="18" height="24">
-            <use href="./images/icons.svg#icon-email"></use>
+            <use href="/img/icons.svg#icon-letter"></use>
           </svg>
         </div>
       </div>
@@ -83,7 +84,7 @@
         <label class="label-check" for="user-privacy">
           <span class="span-check"
             ><svg class="icon-ok" width="10" height="8">
-              <use href="./images/icons.svg#icon-ok"></use></svg></span
+              <use href="/img/icons.svg#icon-ok"></use></svg></span
           ><span
             >I accept the terms and conditions of the
             <a class="link-check">Privacy Policy</a></span
