--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -83,8 +83,8 @@
         />
         <label class="label-check" for="user-privacy">
           <span class="span-check"
-            ><svg class="icon-ok" width="10" height="8">
-              <use href="/img/icons.svg#icon-ok"></use></svg></span
+            ><svg class="icon-ok" width="15" height="15">
+              <use href="/img/icons.svg#icon-check"></use></svg></span
           ><span
             >I accept the terms and conditions of the
             <a class="link-check">Privacy Policy</a></span
