--- a/src/css/backdrop.css
+++ b/src/css/backdrop.css
@@ -226,13 +226,19 @@ color: #fbfbfb;
   position: absolute;
   top: 50%;
   left: 50%;
+  visibility: hidden;
+    opacity: 0;
   transform: translate(-50%, -50%);
+  
 }
 
-.input-check:checked+.label-check span {
+
+.input-check:checked+.label-check .span-check .icon-ok {
   background-color:#00B8D9;
   border: none;
   fill: #f4f4fd;
+  visibility: visible;
+    opacity: 1;
 }
 
 
