--- a/src/css/our-jachts.css
+++ b/src/css/our-jachts.css
@@ -38,6 +38,17 @@
   padding: 32px;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+}
+
+.yacht-name::after {
+  content: '';
+  position: absolute;
+  bottom: 16px;
+  left: 32px;
+  right: 32px;
+  height: 1px;
+  background-color: rgba(4, 3, 6, 0.1);
 }
 
 .yacht-name-p {
@@ -110,6 +121,14 @@
   letter-spacing: -0.02em;
   color: #fbfbfb;
   background-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.rent-yacht-button:active {
+  background-color: #fbfbfb;
+  color: #1b414b;
+  transform: scale(0.98);
 }
 
 .button-wrapper-our-yachts {
@@ -159,6 +178,11 @@
     min-height: 52px;
     line-height: 1.1;
   }
+  .rent-yacht-button:active {
+    background-color: #fbfbfb;
+    color: #1b414b;
+    transform: scale(0.98);
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -178,6 +202,15 @@
   }
   .our-yachts-list {
     gap: 25px;
+  }
+  .rent-yacht-button:hover,
+  .rent-yacht-button:focus {
+    background-color: #fbfbfb;
+    color: #1b414b;
+  }
+
+  .rent-yacht-button:active {
+    transform: scale(0.98);
   }
 }
 
