--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="container">
     <h2 class="reviews-title">
       YachtJet take pride in providing the best possible service and experience
@@ -13,8 +13,8 @@
       <li class="reviews-list-item">
         <img
           class="reviews-author-img"
-          src="/img/john.png"
-          srcset="/img/john.png 1x, /img/john@2x.png 2x"
+          src="/img/john.jpg"
+          srcset="/img/john.jpg 1x, /img/john@2x.jpg 2x"
           alt="john"
           width="56"
           height="56"
@@ -29,8 +29,8 @@
       <li class="reviews-list-item">
         <img
           class="reviews-author-img"
-          src="/img/viktoria.png"
-          srcset="/img/viktoria.png 1x, /img/viktoria@2x.png 2x"
+          src="/img/viktoria.jpg"
+          srcset="/img/viktoria.jpg 1x, /img/viktoria@2x.jpg 2x"
           alt="viktoria"
           width="56"
           height="56"
@@ -45,8 +45,8 @@
       <li class="reviews-list-item">
         <img
           class="reviews-author-img"
-          src="/img/ihor.png"
-          srcset="/img/ihor.png 1x, /img/ihor.png@2x.png 2x"
+          src="/img/ihor.jpg"
+          srcset="/img/ihor.jpg 1x, /img/ihor@2x.jpg 2x"
           alt="ihor"
           width="56"
           height="56"
