final touch id added

--- a/src/partials/our-yachts.html
+++ b/src/partials/our-yachts.html
@@ -1,4 +1,4 @@
-<section class="our-yachts">
+<section class="our-yachts" id="yachts">
   <div class="container">
     <h2 class="our-yachts-title">
       Choose your dream yacht and sail away into the sunset
@@ -170,9 +170,7 @@
       </li>
     </ul>
     <div class="button-wrapper-our-yachts">
-      <a href="/src/partials/rent-a-yacht.html" class="rent-yacht-button"
-        >Yacht rental</a
-      >
+      <a href="#form" class="rent-yacht-button">Yacht rental</a>
     </div>
   </div>
 </section>
