--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,12 +2,15 @@
   <div class="container header-container">
     <a class="logo-header logo-link" href="./index.html">yachtjet</a>
 
-    <nav class="navi-menu">
-      <a class="btn-menu" href="#about">About</a>
-      <a class="btn-menu" href="#yachts">Yachts</a>
-      <a class="btn-menu" href="#reviews">Reviews</a>
-      <a class="btn-menu" href="">Order Service</a>
+    <nav>
+      <ul class="navi-menu">
+        <li><a class="btn-menu" href="#about">About</a></li>
+        <li><a class="btn-menu" href="#yachts">Yachts</a></li>
+        <li><a class="btn-menu" href="#reviews">Reviews</a></li>
+        <li><a class="btn-menu" href="#">Order Service</a></li>
+      </ul>
     </nav>
+
     <address>
       <ul class="social-header">
         <li class="li-social-header">
