adds section rent-a-yachts

--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -51,7 +51,7 @@
         <div class="box-input">
           <input
             class="input-modal"
-            name="user-email-modal"
+            name="user-email"
             type="email"
             id="user-email-modal"
             title="example@gmai.com"
