--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <section class="rents-a-yachts">
+  <section class="rents-a-yachts" id="form">
     <div class="rents-a-yachtc-box">
       <div class="rents-a-yachtc-box-2">
         <h2 class="rents-a-yachts-title">Rent a yacht now</h2>
