--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="page-header">
+<header class="page-header" data-modal>
   <div class="container header-container">
     <a class="logo-header logo-link" href="./index.html">yachtjet</a>
 
