--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -1,6 +1,7 @@
-<div class="backdrop">
+<div class="backdrop" data-modal>
   <div class="modal">
     <button
+      data-modal-close
       type="button"
       class="btn-icon-modal"
       aria-label="Close modal"
