--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
         <li><a class="btn-menu" href="#about">About</a></li>
         <li><a class="btn-menu" href="#yachts">Yachts</a></li>
         <li><a class="btn-menu" href="#reviews">Reviews</a></li>
-        <li><a class="btn-menu" href="#">Order Service</a></li>
+        <li><a class="btn-menu" href="#" data-modal-open>Order Service</a></li>
       </ul>
     </nav>
 
