--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -99,6 +99,7 @@
         />
         <!-- Изображение по умолчанию -->
         <img
+          class="rents-a-yachts-img"
           src="/img/rents-a-yachts/rent-a-yachts-mob@1.jpg"
           alt="premium-yacht"
         />
