--- a/src/css/backdrop.css
+++ b/src/css/backdrop.css
@@ -154,7 +154,7 @@ border-color: #00B8D9;
   top: 50%;
   left: 16px;
   transform: translateY(-50%);
-  fill: #055545;
+  fill: #0097a7;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
