add f-link class

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,9 +4,9 @@
       <div class="f-logo-list">
           <a class="f-logo" href="">yachtjet</a>
           <ul class="f-list">
-            <li class="f-item"><a href="#about">About</a></li>
-            <li class="f-item"><a href="#yachts">Yachts</a></li>
-            <li class="f-item"><a href="#reviews">Reviews</a></li>
+            <li class="f-item"><a class="f-link" href="#about">About</a></li>
+            <li class="f-item"><a class="f-link" href="#yachts">Yachts</a></li>
+            <li class="f-item"><a class="f-link" href="#reviews">Reviews</a></li>
           </ul>
         </div>
           <ul class="social-icon">
