--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -92,16 +92,26 @@
     margin-top: 40px;
 }
 
-.f-items {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 82px;
-    flex-wrap: wrap;
-    padding-bottom: 20px;
+.f-link {
+    display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 8px;
+        width: 91px;
+        height: 40px;
+        background-color: rgba(27, 65, 75, 0.5);
+        border: none;
+        font-weight: 400;
+        font-size: 9px;
+        line-height: 1.3;
+        text-transform: uppercase;
+        text-align: center;
+        color: #fbfbfb;
+        padding-left: 24px;
+        padding-right: 25px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .adv-privacy {
     color: rgba(251, 251, 251, 0.4);
