--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,8 +1,8 @@
 <div class="mobile-menu is-open">
     <a class="logo-header" href="./index.html">yachtjet</a>
     <button class="mob-menu" type="button">
-      <svg class="mob-menu-icon" width="28" height="28" data-menu-open>
-        <use href="/img/icons.svg#icon-burger"></use>
+      <svg class="mob-menu-icon-close" width="28" height="28" data-menu-open>
+        <use href="/img/icons.svg#icon-"></use>
       </svg>
     </button>
 </div>
