--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,10 +1,44 @@
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0e1823;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.in-open {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #fbfbfb;
+  border-radius: 8px;
+  width: 335px;
+  height: 42px;
+  background-color: #fbfbfb;
+  margin-bottom: 201px;
+}
 .logo-header {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.03em;
   color: #1b414b;
 }
-
+.mob-menu-icon-close {
+  fill: #055545;
+}
 
 @media only screen and (min-width: 768px) {
   .mobile-menu {
