add js mobile menu

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,8 +1,8 @@
-<div class="mobile-menu is-open">
+<div class="mobile-menu">
   <div class="mobile-menu-container">
     <div class="mobile-menu-header-container">
       <a class="mob-menu-logo-header" href="./index.html">yachtjet</a>
-      <button class="mob-menu" type="button">
+      <button class="mob-menu-close" type="button">
         <svg class="mob-menu-icon-close" width="16" height="16" data-menu-open>
           <use href="/img/icons.svg#icon-close"></use>
         </svg>
