--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -13,7 +13,7 @@
     transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu.is-open {
+.mobile-menu.is-open-mobile-menu {
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
@@ -44,6 +44,12 @@
   letter-spacing: -0.03em;
   color: #1b414b;
   padding-block: 12px;
+}
+.mob-menu-close{
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    display: inline-flex;
 }
 .mob-menu-icon-close {
   fill: #055545;
