--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -16,7 +16,7 @@
         <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#" data-modal-open>Order Service</a></li>
       </ul>
     </nav>
-      <address class="data-menu-address">
+      <address class="mobile-menu-address">
       <ul class="mob-menu-social">
         <li>
           <a
