mobile-menu-fixed

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -10,13 +10,21 @@
     </div>
     <nav class="mobile-menu-nav-list">
       <ul class="mobile-menu-list">
-        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#about">About</a></li>
-        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#yachts">Yachts</a></li>
-        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#reviews">Reviews</a></li>
-        <li class="mobile-menu-list-item"><a class="mobile-menu-btn" href="#" data-modal-open>Order Service</a></li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-btn" href="#about">About</a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-btn" href="#yachts">Yachts</a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-btn" href="#reviews">Reviews</a>
+        </li>
+        <li class="mobile-menu-list-item">
+          <a class="mobile-menu-btn" href="#" data-modal-open>Order Service</a>
+        </li>
       </ul>
     </nav>
-      <address class="mobile-menu-address">
+    <address class="mobile-menu-address">
       <ul class="mob-menu-social">
         <li>
           <a
