--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,6 @@
 <header class="page-header">
-  <div class="container header-container">
+  <div class="container">
+    <div class="header-container">
     <a class="logo-header logo-link" href="./index.html">yachtjet</a>
 
     <nav>
@@ -54,5 +55,6 @@
         <use href="/img/icons.svg#icon-burger"></use>
       </svg>
     </button>
+    </div>
   </div>
 </header>
