--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,8 @@
+
+
 .header-container {
   display: flex;
+  position: absolute;
   align-items: center;
   justify-content: space-between;
   border: 1px solid #fbfbfb;
@@ -7,8 +10,10 @@
   width: 335px;
   height: 42px;
   background-color: #fbfbfb;
-  margin-bottom: 198px;
+  margin-top: 32px;
+  padding: 0 30px;
 }
+
 .logo-header {
   font-weight: 500;
   font-size: 14px;
@@ -34,7 +39,7 @@
   .header-container {
     width: 704px;
     height: 48px;
-    margin-bottom: 200px;
+    transform: translateX(50);
   }
   .mob-menu {
     display: none;
@@ -99,7 +104,6 @@
   .header-container {
     width: 1080px;
     height: 48px;
-    margin-bottom: 155px;
   }
 }
 
