--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -28,7 +28,7 @@
                 class="rents-a-yachts-input"
                 name="user-email-modal"
                 type="email"
-                id="user-email-"
+                id="user-email"
                 title="example@gmai.com"
                 pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
                 required
