update margin-left in 320px v.

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -39,8 +39,15 @@
     margin-left: auto;
     flex-wrap: wrap;
     row-gap: 10px;
-    margin-left: 37px;
+    margin-left: 10px;
         
+}
+
+@media screen and (min-width: 375px){
+    .f-list {
+            margin-left: 37px;
+    
+        }
 }
 
 .f-link {
